chore: add trips api routes
